# Bryo

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresetsActions.json  KNOWN_ISSUES.md  OVERVIEW.md  PLAN.md  PROGRESS.md  ParserDoc.md  README.md  SemanticCodegenPlan.md  ast.cpp  ast.hpp  basic_enum_prop.bryo  basic_enum_prop.myre  comprehensive_type_test.myre  comprehensive_typeresolver_test.myre  hot_reload.cpp  hot_reload.hpp  lexer.cpp  lexer.hpp  linux_setup.sh  main.cpp  minimal.bryo  minimal.fern  minimal.fn  parser.cpp  parser.hpp  simple.myre  simple2.myre  test.bryo  test.cs  test.mui  test.myre  test0.bryo  test1.bryo  test1.myre  test2.bryo  test2.myre  test3.bryo  (+12 more)
.github/workflows/: release.yml
include/: compiled_module.hpp  compiler.hpp  hot_reload.hpp  jit.hpp  lexer.hpp  platform.h  platform.hpp  script_execution_engine.hpp  test_runner.hpp
include/ast/: arena.hpp  ast.hpp  ast_allocator.hpp  ast_code_printer.hpp  ast_enums.hpp  ast_printer.hpp  ast_rtti.hpp
include/codegen/: codegen.hpp  command_processor.hpp  ir_builder.hpp  ir_command.hpp  jit_engine.hpp
include/common/: logger.hpp  platform.hpp  script_error.hpp  script_token_types.hpp  source_location.hpp  symbol_handle.hpp  token.hpp
include/parser/: declaration_parser.h  declaration_parser.hpp  error_recovery.hpp  expression_parser.h  expression_parser.hpp  lexer.hpp  parse_result.h  parse_result.hpp  parser.h  parser.hpp  parser_base.hpp  parser_context.hpp  pratt_parser.hpp  recursive_parser.hpp  statement_parser.h  statement_parser.hpp  token_stream.hpp
include/semantic/: conversions.hpp  declaration_collector.hpp  scope.hpp  symbol.hpp  symbol_table.hpp  symbol_table_builder.hpp  type.hpp  type_definition.hpp  type_registry.hpp  type_resolver.hpp  type_system.hpp  type_system_example.hpp
include/sharpie/: script_ast.hpp  script_ast_location.hpp  script_compiler.hpp  script_error.hpp  script_parser.hpp  script_token.hpp  script_token_types.hpp  script_tokenizer.hpp
include/sharpie/ast/: ast_base.hpp  ast_declarations.hpp  ast_enums.hpp  ast_expressions.hpp  ast_location.hpp  ast_statements.hpp  ast_types.hpp  primitive_structs.hpp
include/sharpie/common/: logger.hpp  script_error.hpp  script_token_types.hpp
include/sharpie/compiler/: class_type_info.hpp  scope_manager.hpp  script_compiler.hpp  semantic_analyzer.hpp
include/sharpie/parser/: script_parser.hpp
include/sharpie/semantic_analyzer/: dependency_info.hpp  semantic_analyzer.hpp  semantic_context.hpp  semantic_error.hpp  semantic_ir.hpp  symbol_table.hpp  symbol_types.hpp  uml_generator.hpp
include/test/: parser_test_helpers.hpp  test_framework.hpp  test_helpers.hpp  test_suite_helpers.hpp
include/ui/: ui_ast.hpp  ui_lexer.hpp  ui_parser.hpp  ui_token.hpp
lib/: mui_lib.c  mycelium_runtime.cpp  mycelium_runtime.h  runtime_binding.cpp  runtime_binding.h
old/: README.md  test_runner_old.cpp
old/include/codegen/: codegen.hpp.old  codegen_current.hpp  command.hpp  command_processor_current.hpp  ir_builder.hpp.old  ir_builder_current.hpp  ir_command_builder.hpp  ir_command_current.hpp  ir_value.hpp  jit_engine_current.hpp  simple_ir_builder.hpp
old/include/semantic/: error_system.hpp  semantic_error.hpp  symbol_registry.hpp  symbol_table.hpp.old  symbol_table_current.hpp  type_current.hpp  type_system.hpp
old/src/codegen/: codegen.cpp.old  codegen_current.cpp  command_processor_current.cpp  ir_builder.cpp.old  ir_command_current.cpp  jit_engine_current.cpp
old/src/semantic/: symbol_table.cpp.old  symbol_table_current.cpp  type_current.cpp  type_system.cpp
old/tests/: test_command_generation.cpp  test_integration.cpp  test_ir_generation.cpp  test_jit_execution.cpp  test_optimal_architecture.cpp  test_symbol_table_old.cpp
plugin/: language-configuration.json  package.json
plugin/syntaxes/: bryo.tmLanguage.json
runtime/: basic_print.bryo  print.bryo  std.bryo
src/: ast.cpp  compiled_module.cpp  compiled_module.hpp  compiler.cpp  compiler.hpp  hot_reload.cpp  jit.cpp  jit.hpp  lexer.cpp  magic_enum.hpp  script_execution_engine.cpp  test_runner.cpp  test_runner.hpp
src/ast/: arena.hpp  ast.cpp  ast.hpp  ast_allocator.cpp  ast_code_printer.hpp  ast_printer.hpp
src/binding/: binding_arena.hpp  bound_tree.hpp  bound_tree_builder.cpp  bound_tree_builder.hpp  bound_tree_printer.hpp  conversions.hpp  symbol_resolution_pass.hpp
src/codegen/: codegen.cpp  codegen.hpp  command_processor.cpp  ir_builder.cpp  ir_command.cpp  jit_engine.cpp
src/common/: logger.cpp  logger.hpp  platform.hpp  source_location.hpp  symbol_handle.hpp  token.cpp  token.hpp
src/hlir/: bound_to_hlir.cpp  bound_to_hlir.hpp  hlir.hpp  hlir_builder.hpp
src/parser/: declaration_parser.cpp  expression_parser.cpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  parser_base.cpp  parser_context.cpp  pratt_parser.cpp  recursive_parser.cpp  statement_parser.cpp  token_stream.cpp  token_stream.hpp
src/semantic/: declaration_collector.cpp  scope.cpp  scope.hpp  symbol.cpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp  symbol_table_builder.cpp  symbol_table_builder.hpp  type.cpp  type.hpp  type_definition.cpp  type_resolver.cpp  type_resolver.hpp  type_system.cpp  type_system.hpp
src/sharpie/: script_ast.cpp  script_compiler.cpp  script_parser.cpp  script_tokenizer.cpp
src/sharpie/ast/: ast_base.cpp  primitive_structs.cpp
src/sharpie/common/: logger.cpp
src/sharpie/compiler/: compiler_visitors.cpp  scope_manager.cpp  script_compiler.cpp  semantic_analyzer.cpp
src/ui/: ui_ast.cpp  ui_lexer.cpp  ui_parser.cpp  ui_token.cpp
tests/: README.md  Test1.fern  Test1.fn  Test10.bryo  Test10.fn  Test11.fern  Test11.fn  Test12.fern  Test12.fn  Test13.fern  Test13.fn  Test14.fern  Test14.fn  Test15.fern  Test15.fn  Test16.fern  Test16.fn  Test17.bryo  Test17.fn  Test18.bryo  Test18.fn  Test19.bryo  Test19.fn  Test2.bryo  Test2.fn  Test20.bryo  Test20.fn  Test21.bryo  Test21.fn  Test22.bryo  Test22.fn  Test23.fern  Test23.fn  Test24.bryo  Test24.fn  Test25.bryo  Test25.fn  Test26.fern  Test26.fn  Test27.fern  (+66 more)
(+18 files in other folders)
